# pico-miniboy

./: .gitignore  CMakeLists.txt  Changelog.md  README.md
demos/bouncing_ball/: CMakeLists.txt  main.c
demos/stress_test/: CMakeLists.txt  main.c
demos/tft_lcd/: CMakeLists.txt  display_driver.h  dma_spi.c  dma_spi.h  font.c  main.c  system_config.c  system_config.h  tft_lcd.c
lib/: CMakeLists.txt
lib/core/: miniboy_engine.c  miniboy_engine.h
lib/display/: display_driver.c  display_driver.h  display_transport.h  dma_mem.c  dma_mem.h  dma_spi.c  dma_spi.h  spi.pio  spi_rgb332.pio  transport_pio.c  transport_pio.h
lib/graphics/: font.c  font.h  framebuffer.c  framebuffer.h  render_service.c  render_service.h  surface.h
lib/profiler/: profiler.c  profiler.h
lib/system_config/: system_config.c  system_config.h
